# zapalloc

./: .travis.yml  AUTHORS  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
include/: zapalloc.h  zapalloc_macros.h  zapalloc_types.h
src/: Makefile.am  zapalloc_alloc.c  zapalloc_deinit.c  zapalloc_free.c  zapalloc_init.c
src/testsuite/: Makefile.am  main.c
tests/: big_allocations.c  init_deinit.c
