lib_LTLIBRARIES = libzapalloc.la
libzapalloc_la_SOURCES = zapalloc_init.c	 \
						 zapalloc_deinit.c 	 \
						 zapalloc_alloc.c    \
						 zapalloc_free.c

include_HEADERS = ../include/zapalloc.h      \
                  ../include/zapalloc_macros.h

noinst_HEADERS = ../include/zapalloc_types.h

AM_CPPFLAGS=-I../include/
